# timy

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: dates.py
src/timy/: __init__.py
